# bookstore-backend

./: .gitignore  pyproject.toml
src/: main.py
src/core/: security.py
src/db/: init_superuser.py  mongo.py  mongo_test.py
src/email/: brevo.py
src/models/: user.py
src/routes/: auth.py  bookstore-pricing-ws.code-workspace
